fix: adjusted the alignment of all sections and deleted footer git branch

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 :root {
     --header-element-box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.301);
     --background-shapes-color: rgb(4, 91, 112);
+    --html-section-width: 1700px;
 }
 
 *,
@@ -52,12 +53,20 @@ header {
     margin: 80px;
 }
 
+.header-title {
+    font-size: 3rem;
+}
+
 .header-image-container {
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .header-image {
-    max-height: 600px;
+    max-height: 1200px;
     box-shadow: var(--header-element-box-shadow);
 }
 
@@ -68,18 +77,23 @@ header {
     bottom: 90px;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 10px;
+    min-width: 800px;
     font-size: 3rem;
 }
 
 .header-main-text {
-    max-width: 600px;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     padding-top: 10px;
     padding-bottom: 30px;
 }
 
 .header-text-container {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
     box-shadow: var(--header-element-box-shadow);
+    min-width: 900px;
+    min-height: 500px;
     padding: 30px;
 }
 
@@ -195,11 +209,12 @@ main {
 
 footer {
     display: flex;
-    min-width: 100vw;
     background-color: var(--background-shapes-color);
+    min-width: 100vw;
     margin-top: 150px;
-    justify-content: space-between;
-    padding: 150px;
+    justify-content: center;
+    gap: 200px;
+    padding: 80px;
 }
 
 .phone-group,
@@ -248,4 +263,11 @@ footer {
 .footer-image {
     max-height: 800px;
     min-width: 1000px;
+}
+
+
+header,
+main,
+footer {
+    max-width: var(--html-section-width);
 }
